# BearScribes

./: .env  .env.example  .gitignore  LICENSE  README.md  get.py  openapi.json  pyproject.toml
.github/workflows/: deploy.yml  main.yml
app/: db.py  main.py  models.py  schemas.py
app/routers/: auth.py  books.py  hash_token.py
client/: .prettierrc  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
client/__tests__/: About.test.tsx  BookGrid.test.tsx  Contact.test.tsx  Footer.test.tsx  Header.test.tsx  Hero.test.tsx  Login.test.tsx  SearchBar.test.tsx  Signup.test.tsx  Testimonial.test.tsx  UserInfo.test.tsx
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(auth)/: layout.tsx
client/src/app/about/: about.module.css  layout.tsx  page.tsx
client/src/app/bookInfo/: BookInfo.css  page.tsx
client/src/app/items/: Item.tsx  Items.css  page.tsx
client/src/app/searchBooks/: page.tsx
client/src/components/: Footer.tsx  Header.tsx  Item.tsx  SearchBar.tsx  SearchItem.tsx
client/src/components/Contact/: Contact.module.scss  Contact.tsx
client/src/components/Footer/: Footer.module.scss  Footer.tsx
client/src/components/Header/: Header.module.scss  Header.tsx
client/src/models/: book.ts  bookinfo.ts  cover.ts  openLibrary.ts  openLibraryBook.ts  openLibraryResults.ts  response.ts  userBook.ts  userInfo.ts
client/src/styles/: Footer.css  Header.css  Item.css  SearchBar.css  SearchItem.css
client/src/utils/: fetchAPI.ts
server/: Pipfile  app.py  requirements.txt
(+66 files in other folders)
